--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,21 +8,25 @@
 </head>
 <body>
   
-  <input placeholder="descricao tarefa" [(ngModel)]="tarefa.nome">
+<router-outlet></router-outlet>
 
-  <select [(ngModel)]="tarefa.categoria">
-    <option value="TO-DO" >TO-DO</option>
-    <option value="DOING" >DOING</option>
-    <option value="DONE" >DONE</option>
-  </select>
+<a routerLink="/tarefas" >cadastrar Tarefa</a>
+
+<br>
+
+<a routerLink="/categoria" >cadastrar Categoria</a>
+
+<br>
 
   <button (click)="cadastrarTarefa()">Cadastrar</button>
 
-  <div id="divPrincipal">
+  <ng-container id="divPrincipal" >
 
-    <div id="todo">
+    <div id="todo" >
       <h1>TO-DO</h1>
-        <div *ngFor="let tarefa of tarefasTodo; index as indice">
+
+        <div *ngFor="let tarefa of tarefaLista;index as indice" [ngSwitch]="tarefa.categoria">
+          <div *ngSwitchCase="'TO-DO'">
 
           Tarefa {{indice+1}}: {{ tarefa.nome }} 
 
@@ -32,18 +36,21 @@
             <option value="DONE" >DONE</option>
           </select>
       
-          <button (click)="removerTodo(indice)">Remover</button>
-          <button (click)="alterar(tarefa, indice)">alterar</button>
+          <button (click)="removerListaTotal(indice)">Remover</button>
+          <button (click)="alterar(tarefa)">alterar</button>
       
+          </div>
 
         </div>
-    </div>
+      </div>
 
     <br>
 
-    <div id="doing">
+    <div id="doing" >
       <h1>DOING</h1>
-        <div *ngFor="let tarefa of tarefasDoing; index as indice">
+
+      <div *ngFor="let tarefa of tarefaLista;index as indice" [ngSwitch]="tarefa.categoria">
+        <div *ngSwitchCase="'DOING'">
 
           Tarefa {{indice+1}}: {{ tarefa.nome }} 
 
@@ -53,15 +60,18 @@
             <option value="DONE" >DONE</option>
           </select>
       
-          <button (click)="removerDoing(indice)">Remover</button>
-          <button (click)="alterar(tarefa, indice)">alterar</button>
+          <button (click)="removerListaTotal(indice)">Remover</button>
+          <button (click)="alterar(tarefa)">alterar</button>
           
+        </div>
         </div>
     </div>
 
-    <div id="done">
+    <div id="done" >
       <h1>DONE</h1>
-        <div *ngFor="let tarefa of tarefasDone; index as indice">
+
+      <div *ngFor="let tarefa of tarefaLista;index as indice" [ngSwitch]="tarefa.categoria">
+        <div *ngSwitchCase="'DONE'">
 
           Tarefa {{indice+1}}: {{ tarefa.nome }} 
 
@@ -71,13 +81,14 @@
             <option value="DONE" >DONE</option>
           </select>
       
-          <button (click)="removerDone(indice)">Remover</button>
-          <button (click)="alterar(tarefa, indice)">alterar</button>
+          <button (click)="removerListaTotal(indice)">Remover</button>
+          <button (click)="alterar(tarefa)">alterar</button>
           
+        </div>
       </div>
     </div>
-    
-  </div> 
+   
+  </ng-container> 
   
 
 
