--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,27 +1,30 @@
-#divPrincipal{
+*{
+    background-color: rgb(0, 0, 0);
+    color:white
+}
+
+#cabecalho{
+
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+
 }
 
-#todo{
+#corpo{
 
+    display: flex;
     justify-content: center;
-    background-color: red;
 
 }
 
-#doing{
+.botoes{
+    margin: 10px;
+    background-color: rgb(75, 75, 206);
+    width: 200px;
+    height: 50px;
+    border: solid white 4px ;
+    border-radius: 15px;
+    font-size: 20px;
+    color: rgb(10, 10, 10);
 
-    background-color: blue;
-
-}
-
-#done{
-
-    background-color: green;
-
-}
-
-.titulo{
-    align-self: center;
 }
