tentativa implementar propriedades 1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,10 @@
   <br>
   
   <button class="botoes" routerLink="/categoria" >cadastrar Categoria</button>
+
+  <br>
+
+  <button class="botoes" routerLink="/propriedades" >propriedades</button>
   
 </div>
 
