--- a/src/tarefas/tarefas.component.css
+++ b/src/tarefas/tarefas.component.css
@@ -13,10 +13,10 @@
     justify-content: space-evenly;
     align-items: center;
     border: white solid 5px;
-    border-radius: 30px;
+    /* border-radius: 30px; */
     background-color:bisque;
     color: black;
-    height: 50px;
+    /* height: 50px; */
 }
 
 #categorias{
@@ -39,4 +39,8 @@ border-radius: 15px ;
 #editar{
     background-color: darkorange;
     border-radius: 15px;
+}
+.a{
+    background-color:bisque;
+    border: none;
 }
